--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 <head>
   <meta charset="utf-8">
 
