mobile header done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
   <div class="navigation">
+    <div class="fun">
     <h2>Fun Bus</h2>
+  </div>
 
     <nav>
       <a href="#">Home</a>
